--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==0.1.10
 asn1crypto==0.23.0
+audioread==2.1.5
 bleach==1.5.0
 certifi==2017.11.5
 cffi==1.11.2
@@ -7,33 +8,58 @@ chardet==3.0.4
 conda==4.4.8
 cryptography==2.1.4
 cycler==0.10.0
+decorator==4.2.1
+future==0.16.0
 futures==3.1.1
 fuzzywuzzy==0.16.0
+h5py==2.7.1
 html5lib==0.9999999
 idna==2.6
+joblib==0.11
+kapre==0.1.3
+Keras==2.1.4
+librosa==0.6.0
+llvmlite==0.22.0
 Markdown==2.6.11
 matplotlib==2.1.2
-numpy==1.14.0
+mplayer.py==0.7.1
+MplayerCtrl==0.3.3
+numba==0.37.0
+numexpr==2.6.4
+numpy==1.14.1
 olefile==0.45.1
+opencv-python==3.4.0.12
 pandas==0.22.0
 Pillow==5.0.0
+pipenv==11.8.3
+playsound==1.2.2
 protobuf==3.5.1
 pycosat==0.6.3
 pycparser==2.18
+pydot==1.2.4
+pygame==1.9.3
+pygn==0.10.1
 pyOpenSSL==17.5.0
 pyparsing==2.2.0
 PySocks==1.6.7
 python-dateutil==2.6.1
 pytz==2017.3
+PyYAML==3.12
 requests==2.18.4
+resampy==0.2.0
 ruamel-yaml==0.11.14
 scikit-learn==0.19.1
 scipy==1.0.0
 six==1.11.0
 sklearn==0.0
-tensorflow-gpu==1.5.0
-tensorflow-tensorboard==1.5.0
+tables==3.4.2
+tensorflow==1.5.0
+tensorflow-tensorboard==1.5.1
+Theano==1.0.1
 torch==0.3.0.post4
 torchvision==0.2.0
+tqdm==4.22.0
 urllib3==1.22
+virtualenv==15.1.0
+virtualenv-clone==0.3.0
 Werkzeug==0.14.1
